Revert "Reverts changes made for REVIEW-5719"
This reverts commit ac8a61ecb979fae4ea0db96a223987a30e74f419.